# modelforge

./: .dockerignore  .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml  synthetic_load.csv
.github/workflows/: deploy.yml
deploy/: README.md  modelforge.service
docker/: Dockerfile  Dockerfile.timeseries  Dockerfile.vision  build.sh  docker-compose.yml
docs/: adaptation-tech-survey.md  architecture.md  gap-analysis.md  pipeline-roadmap.md  progress.md
examples/: seed_all.py
examples/chronos-forecasting-demo/: README.md  make_dataset.py  mirror.py
examples/chronos-forecasting-demo/overlay/: .gitattributes  README.md  handler.py
examples/cross_region_adaptation/: README.md  drift_detection.py  ensemble_predict.py  feature_analysis.py  features_north.yaml  generate_data.py  param_search.py  requirements.txt  run_scenario.py  seed_store.py  train.py
examples/dataset-demo/: README.md  make_coco_dataset.py  make_csv_dataset.py  make_image_dataset.py
examples/image-classification-demo/: README.md  make_dataset.py  make_transfer_dataset.py  mirror.py
examples/image-classification-demo/overlay/: .gitattributes  README.md  handler.py
examples/load_forecast/: generate_data.py  metrics.json  requirements.txt  run_workflow.py  seed_store.py  train_model.py
examples/mnist/: requirements.txt  seed_store.py  train_model.py
examples/object-detection-demo/: README.md  make_dataset.py  mirror.py
examples/object-detection-demo/overlay/: .gitattributes  README.md  handler.py
src/modelforge/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  db.py  enums.py  lfs_store.py  loader.py  main.py  repo_reader.py  runner.py  schema.py  server.py  storage.py  store.py  web.py
src/modelforge/adapters/: __init__.py  runners.py
src/modelforge/api/: calibrations.py  dataset_preview.py  deployment.py  download.py  evaluation.py  evaluations.py  features.py  git_routes.py  lfs_routes.py  lineage.py  monitoring.py  parameters.py  preview.py  registry.py  repos.py  transfers.py  workspaces.py
src/modelforge/core/: __init__.py  protocols.py  types.py
src/modelforge/db/: __init__.py  calibrations.py  connection.py  evaluations.py  models.py  repo_cards.py  repos.py  tokens.py  transfers.py  users.py  workspaces.py
src/modelforge/hooks/: pre_receive.py
tests/: conftest.py  test_api_evaluations.py  test_calibration.py  test_core_abstractions.py  test_dataset.py  test_datasets.py  test_datasets_detection.py  test_db_evaluations.py  test_deployment.py  test_docker_backend.py  test_evaluation.py  test_evaluator.py  test_export_import.py  test_features.py  test_health.py  test_lfs_materialize.py  test_loader.py  test_metrics.py  test_metrics_detection.py  test_monitoring.py  test_parameters.py  test_registry.py  test_runner_warmstart.py  test_sandbox_entry.py  test_scenario_filter.py  test_transfer.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
(+109 files in other folders)
