[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modelforge"
version = "0.2.0"
description = "通用模型仓库服务（Git + LFS）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "markdown-it-py>=3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
# runtime extras：评估容器镜像按 task 装对应组，主包保持轻
runtime-timeseries = [
    "pandas>=2.0",
    "pyarrow>=15.0",
]
runtime-vision = [
    "Pillow>=10.0",
]

[project.scripts]
modelforge = "modelforge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
modelforge = ["static/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
